# pypom

./: MANIFEST.in  Pipfile  README  README.md  build.sh  build_manually_cmake.sh  build_manually_macos.sh  setup.py
examples/: Camera.ipynb  Cilinder projection.ipynb  Compatibility.ipynb  homographies_bottom_top.json
examples/full_example/: full_example.ipynb
examples/full_example/calibration/: extrinsics_gopro6.0.json  extrinsics_gopro6.1.json  extrinsics_gopro6.2.json  extrinsics_gopro6.3.json  intrinsics_gopro6.1.json  intrinsics_gopro6.2.json  intrinsics_gopro6.3.json
pom/: misc.h  pom.cc  pom_solver.cc  rgb_image.cc  rgb_image.h
pypom/: CMakeLists.txt  Makefile.manual  README  Untitled.ipynb  __init__.py  camera.py  compatibility.py  core.cpp  core.hpp  genpom.py  pom.py  pom_core.cpp  solver.py  utils.py  wrapper.cpp
scripts/: bgsub_avg.py  bgsub_cnn.py  bgsub_knn.py  bgsub_mog2.py  compute_extrinsics.py  compute_intrinsics.py  downsampling.py  extract_sequence_of_frames.py  linear_transform.py  undistort.py
tests/: Test cameras.ipynb  Test cilinder projection.ipynb  Tutorial -- Camera.ipynb  Tutorial -- Cilinder projection.ipynb  Untitled.ipynb  benchmark.py  homographies_bottom_top.json  test (another copy).py  test (copy).py
tutorials/: Test H_ground, H_head and head_height.ipynb  Tutorial -- Camera.ipynb  Tutorial -- Cilinder projection.ipynb  homographies_bottom_head_height.json  intrinsics_cam0.json  points_cam0_undistorted.json  rectangles.pom
